--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -14,7 +14,7 @@
             </div>
           </div>
 
-          <%= f.button :submit, "Send me reset password instructions", class:"button is-primary" %>
+          <%= f.button :submit, "Send me reset password instructions", class: "button is-dark" %>
 
         <% end %>
         <br />
