--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -14,6 +14,11 @@
             </div>
           </div>
 
+          <div class="field">
+            <div class="control">
+              <%= f.input :username, required: true, input_html: { class: "input"}, wrapper: false, label_html: { class: "label" } %>
+            </div>
+          </div>
 
           <div class="field">
             <div class="control">
@@ -33,7 +38,7 @@
             </div>
           </div>
 
-          <%= f.button :submit, "Sign up", class:"button is-primary is-medium" %>
+          <%= f.button :submit, "Sign up", class:"button is-dark is-medium" %>
 
         <% end %>
         <br />
