--- a/app/views/whisprs/_form.html.erb
+++ b/app/views/whisprs/_form.html.erb
@@ -1,15 +1,14 @@
-
 <%= simple_form_for(@whispr) do |f| %>
   <%= f.error_notification %>
-  <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
-
-  <div class="form-inputs">
-    <%= f.input :title %>
-    <%= f.input :description %>
-    <%= f.input :user_id %>
+  <div class="field is-small">
+    <div class="control is-small has-text-white">
+      <%= f.input :title , label: "Whispr about it", input_html: { class: "input is-small"}, wrapper: false, label_html: {class: "label"}, placeholder: "Compose a new whispr...", autofocus: true %>
+    </div>
+    <div class="control is-small has-text-white">
+      <%= f.input :description , label: "What's on your mind?", input_html: { class: "textarea is-small"}, wrapper: false, label_html: {class: "label"}, placeholder: "Add your description" %>
+    </div>
   </div>
 
-  <div class="form-actions">
-    <%= f.button :submit %>
-  </div>
+  <%= f.button :submit, class: "button is-primary is-small" %>
 <% end %>
+
