--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -38,7 +38,7 @@
             </div>
           </div>
 
-          <%= f.button :submit, "Sign up", class:"button is-dark is-medium" %>
+          <%= f.button :submit, "Sign up", class:"button is-primary" %>
 
         <% end %>
         <br />
