--- a/app/views/whisprs/edit.html.erb
+++ b/app/views/whisprs/edit.html.erb
@@ -1,6 +1,14 @@
-<h1>Editing Whispr</h1>
+<h1></h1>
+<div class="columns">
+  <div class="column is-3">
+  </div>
+  <div class="column is-6">
+    <%= render 'form', whispr: @whispr %>
+  </div>
+  <div class="column is-3">
+  </div>
+</div>
 
-<%= render 'form', whispr: @whispr %>
 
 <%= link_to 'Show', @whispr %> |
 <%= link_to 'Back', whisprs_path %>
