--- a/app/assets/stylesheets/application.scss.erb
+++ b/app/assets/stylesheets/application.scss.erb
@@ -14,7 +14,7 @@
  *= require_self
  */
 
-$pink: #ea4c89;
+$pink: hsl(184, 75%, 42);
 $pink-invert: #fff;
 
 $primary: $pink;
@@ -33,12 +33,23 @@ $panel-heading-background-color : hsl(0, 0%, 21%);
   }
 }
 
+.fa.fa-trash-o {
+  color: hsl(357, 80%, 39%) !important;
+}
+.fa.fa-trash-o:hover {
+  color: hsl(0, 100%, 40%) !important;
+}
+
 .control-label{
   color: white !important; // some color
 }
 
 h2 {
   color: white !important;
+}
+
+.pad-top {
+  padding-top: 10px;
 }
 
 .hint {
@@ -69,20 +80,24 @@ form {
   }
 }
 
-a {
-    color: white;
-}
 
 p {
   color: white !important;
 }
 
+.box  {
+  border: 1px solid white;
+}
+
 .profile-bg {
   background-color: hsl(0, 0%, 21%);
+  .box  {
+    border-color:  white;
+  }
 }
 
 .pink-bg {
-  background-color: #ea4c89;
+  background-color: hsl(184, 75%, 42);
 }
 
 .top-alligned {
@@ -122,6 +137,73 @@ p {
   background-image: url(image_path("navbar.jpg"));
 }
 
+.is-full-width {
+  .button {
+    width: available !important;
+    text-align: center;
+    display: block;
+  }
+  width: available !important;
+  text-align: center;
+  display: block;
+}
+
+.notification {
+  border-radius: unset;
+}
+
 .notification:not(:last-child){
   margin-bottom: 0;
+}
+
+.contains-dropper {
+  height: 260px;
+  width: 200px;
+  display: table-cell;
+  z-index: 100;
+  position: relative;
+  padding-top: 11px;
+}
+
+.dropper {
+  position: relative;
+  border: 2px dashed hsl(184, 75%, 42%);
+  background-color: hsl(183, 16%, 23%);
+  text-align: center;
+  vertical-align: middle;
+  display: table-cell;
+  z-index: 100;
+  height: 260px;
+  width: 200px;
+  &.is-dragging::before {
+    content: "";
+    position: absolute;
+    left: 0; width: 100%;
+    top: 0; height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.5em;
+    background-color: rgba($primary, .3);
+    pointer-events: none;
+    z-index: 99;
+
+  }
+  &.is-in-dropper::before {
+    content: "";
+    position: absolute;
+    left: 0; width: 100%;
+    top: 0; height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.5em;
+    background-color: rgba(black, .3);
+    pointer-events: none;
+    z-index: 99;
+  }
+}
+
+.file-i {
+  visibility: hidden !important;
 }
