--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -49,7 +49,7 @@
             </div>
           </div>
 
-          <%= f.button :submit, "Update", class:"button is-dark" %>
+          <%= f.button :submit, "Update", class:"button is-primary" %>
 
         <% end %>
 
