--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,26 +25,22 @@
       </div>
 
       <div id="navbar" class="navbar-menu">
+        <div class="navbar-start">
+          <div class="navbar-item">
+            <% if user_signed_in? %>
+              <p class="control">
+                <%= link_to root_path, class:"button is-primary" do %>
+                  <span>New Whispr</span>
+                  <span class="icon is-small"><i class="fa fa-cloud-upload"></i></span>
+                <% end %>
+              </p>
+            <% end %>
+          </div>
+        </div>
         <div class="navbar-end">
           <div class="navbar-item">
             <div class="field is-grouped">
-              <p class="control">
-                <%= link_to root_path, class:"button is-primary"  do%>
-                  <span>New Whispr</span>
-                  <span class="icon is-small"><i class="fa fa-upload"></i></span>
-                <% end %>
-              </p>
-            </div>
-          </div>
-          <div class="navbar-item">
-            <div class="field is-grouped">
               <% if user_signed_in? %>
-                <p class="control">
-                  <% link_to new_whispr_path, class:"button is-dark" do %>
-                    <span class="icon is-small"><i class="fa fa-upload"></i></span>
-                    <span>New Whispr</span>
-                  <% end %>
-                </p>
                 <p class="control">
                   <%= link_to current_user.name, edit_user_registration_path, class:"button is-dark" %>
                 </p>
@@ -53,7 +49,7 @@
                 </p>
               <% else %>
                 <p class="control">
-                  <%= link_to "Sign In", new_user_session_path, class:"button is-dark" %>
+                  <%= link_to "Log In", new_user_session_path, class:"button is-dark" %>
                 </p>
                 <p class="control">
                   <%= link_to "Sign Up", new_user_registration_path, class:"button is-dark" %>
@@ -64,16 +60,6 @@
         </div>
       </div>
     </nav>
-    <% if flash[:notice] %>
-      <div class="notification is-primary global-notification">
-        <p class="notice"><%= notice %></p>
-      </div>
-    <% end %>
-    <% if flash[:alert] %>
-      <div class="notification is-danger global-notification">
-        <p class="alert"><%= notice %></p>
-      </div>
-    <% end %>
     <div class="hero has-bg-img is-fullheight has-fixed-navbar">
         <%= yield %>
     </div>
