--- a/app/views/whisprs/_form.html.erb
+++ b/app/views/whisprs/_form.html.erb
@@ -1,14 +1,37 @@
 <%= simple_form_for(@whispr) do |f| %>
   <%= f.error_notification %>
-  <div class="field is-small">
-    <div class="control is-small has-text-white">
-      <%= f.input :title , label: "Whispr about it", input_html: { class: "input is-small"}, wrapper: false, label_html: {class: "label"}, placeholder: "Compose a new whispr...", autofocus: true %>
-    </div>
-    <div class="control is-small has-text-white">
-      <%= f.input :description , label: "What's on your mind?", input_html: { class: "textarea is-small"}, wrapper: false, label_html: {class: "label"}, placeholder: "Add your description" %>
+  <div class="container">
+    <div class="tile is-ancestor">
+      <div class="tile is-vertical is-7">
+        <div class="tile is-parent is-vertical">
+          <div class="tile is-child ">
+            <div class="field">
+              <div class="control is-small has-text-white">
+                <%= f.input :title , label: "Whispr about it", input_html: { class: "input is-small"}, wrapper: false, label_html: {class: "label"}, placeholder: "Compose a new whispr...", autofocus: true %>
+              </div>
+              <div class="control is-small has-text-white">
+                <%= f.input :description , label: "What's on your mind?", input_html: { class: "textarea is-small"}, wrapper: false, label_html: {class: "label"}, placeholder: "Add your description" %>
+              </div>
+            </div>
+            <%= f.button :submit, class: "button is-primary" %>
+          </div>
+        </div>
+      </div>
+      <div class="tile is-vertical is-5">
+        <div class="tile is-parent is-vertical">
+          <div class="tile is-child">
+            <output id="list"></output>
+              <% unless @whispr.whispr_files.blank? %>
+                <%= image_tag (@whispr.whispr_files_url), id: "previewImage" %>
+              <% end %>
+              <div class="dropper has-text-white" id="drop_zone">
+                Drop image here.
+              </div>
+              <%= f.input :whispr_files, as: :hidden, label:false, input_html: { class: "", type: "file" }, wrapper: false, label_html: { class: "field-label" } %>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
-
-  <%= f.button :submit, class: "button is-primary is-small" %>
 <% end %>
 
