--- a/app/assets/stylesheets/application.scss.erb
+++ b/app/assets/stylesheets/application.scss.erb
@@ -33,11 +33,11 @@ $panel-heading-background-color : hsl(0, 0%, 21%);
   }
 }
 
-.fa.fa-trash-o {
-  color: hsl(357, 80%, 39%) !important;
+.danger-icons {
+  color: hsl(357, 83%, 39%) !important;
 }
-.fa.fa-trash-o:hover {
-  color: hsl(0, 100%, 40%) !important;
+.danger-icons:hover {
+  color: hsl(357, 71%, 37%) !important;
 }
 
 .control-label{
@@ -148,6 +148,10 @@ p {
   display: block;
 }
 
+.allign-right {
+  text-align: right;
+}
+
 .notification {
   border-radius: unset;
 }
@@ -172,7 +176,6 @@ p {
   text-align: center;
   vertical-align: middle;
   display: table-cell;
-  z-index: 100;
   height: 260px;
   width: 200px;
   &.is-dragging::before {
