--- a/app/views/whisprs/_profile.html.erb
+++ b/app/views/whisprs/_profile.html.erb
@@ -1,6 +1,6 @@
 <div class="column is-one-quarter sidebar">
   <nav class="panel is-dark">
-    <p class="panel-heading"><strong class="has-text-white">Profile</strong></p>
+    <p class="panel-heading"><strong><%= link_to "Profile", root_path %></strong></p>
     <div class="panel-block">
       <article class="media">
         <div class="media-left">
