--- a/app/views/whisprs/index.html.erb
+++ b/app/views/whisprs/index.html.erb
@@ -7,7 +7,7 @@
         <%= render 'popular' %>
       <% end %>
       <%= render 'feed' %>
-      <%= render 'follow_others' %>
+      <%= render 'users/show' %>
     </div>
   </div>
 </section>
