--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,25 +1,27 @@
-<%= simple_form_for([whispr, whispr.comments.build]) do |f| %>
+<%= simple_form_for([whispr, whispr.comments.build], format: :js, remote: true) do |f| %>
   <div class="container pad-top">
-    <div class="tile is-ancestor">
-      <div class="tile is-vertical is-10">
-        <div class="tile is-parent is-vertical">
-          <div class="tile is-child ">
-            <div class="field">
-              <div class="control">
-                <%= f.input :response, palceholder: 'Comment here', input_html: { class: 'input is-small', type: 'text'}, wrapper: false, label: false %>
+    <article class="media">
+      <div class="tile is-ancestor">
+        <div class="tile is-vertical is-10">
+          <div class="tile is-parent is-vertical">
+            <div class="tile is-child ">
+              <div class="field">
+                <div class="control">
+                  <%= f.input :response, palceholder: 'Comment here', input_html: { class: 'input is-small', type: 'text'}, wrapper: false, label: false %>
+                </div>
               </div>
-            </div>
 
+            </div>
+          </div>
+        </div>
+        <div class="tile is-vertical is-2">
+          <div class="tile is-parent is-vertical">
+            <div class="tile is-child">
+              <%= f.button :submit, 'Submit', class: 'button is-primary is-small is-full-width' %>
+            </div>
           </div>
         </div>
       </div>
-      <div class="tile is-vertical is-2">
-        <div class="tile is-parent is-vertical">
-          <div class="tile is-child">
-            <%= f.button :submit, 'Submit', class: 'button is-primary is-small is-full-width' %>
-          </div>
-        </div>
-      </div>
-    </div>
+    </article>
   </div>
 <% end %>
