--- a/app/views/whisprs/_form.html.erb
+++ b/app/views/whisprs/_form.html.erb
@@ -1,6 +1,6 @@
-<%= simple_form_for(@whispr) do |f| %>
+<%= simple_form_for @whispr, html: { multipart: true } do |f| %>
   <%= f.error_notification %>
-  <div class="container">
+  <div class="container" id="create-container">
     <div class="tile is-ancestor">
       <div class="tile is-vertical is-7">
         <div class="tile is-parent is-vertical">
@@ -22,16 +22,17 @@
           <div class="tile is-child">
             <output id="list"></output>
               <% unless @whispr.whispr_files.blank? %>
-                <%= image_tag (@whispr.whispr_files_url), id: "previewImage" %>
+                <%= image_tag @whispr.whispr_files_url, id: "previewImage" %>
               <% end %>
               <div class="dropper has-text-white" id="drop_zone">
                 Drop image here.
               </div>
-              <%= f.input :whispr_files, as: :hidden, label:false, input_html: { value: params[:whispr_file] }, wrapper: false, label_html: { class: "field-label" } %>
+              <%= f.input :whispr_files, as: :hidden, label: false, id: 'whispr_files_url', input_html: { class: 'file-i', type: "file" }, wrapper: false %>
+
+           </div>
           </div>
         </div>
       </div>
     </div>
-  </div>
 <% end %>
 
