--- a/app/views/users/_show.html.erb
+++ b/app/views/users/_show.html.erb
@@ -1,8 +1,8 @@
 <div class="column sidebar">
   <nav class="panel">
-    <p class="panel-heading has-text-white">Who to Follow</p>
+    <p class="panel-heading"><storng>Who to Follow</storng></p>
 
-    <%= render 'users/follows', user: @users%>
+    <%= render 'users/follows', user: @users %>
 
   </nav>
 </div>
