--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,5 +1,5 @@
 <section class="section">
-  <div class="container">
+  <div class="container profile-bg">
     <div class="columns is-centered">
       <div class="column is-4">
 
