--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,7 +1,7 @@
 <section class="section">
   <div class="container">
     <div class="columns is-centered">
-      <div class="column is-4">
+      <div class="column is-4 profile-bg">
         <h2 class="title is-2">Sign up</h2>
 
         <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
